<resources>
    <string name="app_name">AppBelchior</string>
    <string name="facebook_app_id">140553099914903</string>
    <string name="btnEntrarGoogle">Entrar com Google</string>
    <string name="btnEntrarFacebook">Entrar com Facebook</string>
    <string name="btnEntrarEmail">Entrar com Email</string>
    <string name="btnConect">Conectar</string>
    <string name="btnCriarConta">Criar Conta</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="textoTelaInicial">Suas músicas estão grafitadas nas paredes. Encontre e ouça. </string>
    <string name="textoTelaInicial2"> nas paredes. Encontre e ouça.</string>
    <string name="ao_clicar_login_voce_concorda_com_os_nossos">Ao fazer login, você concorda com os nossos</string>
    <string name="e">e a nossa </string>
    <string name="termos_de_servico">termos de uso</string>
    <string name="politica_de_privacidade">política de privacidade</string>
    <string name="cancelar">Cancelar</string>
    <string name="sucesso">Sucesso! %1$s</string>
    <string name="ok">OK</string>
    <string name="info">Informação: %1$s</string>
    <string name="question">Informação: %1$s</string>
    <string name="error">Erro</string>
    <string name="yes">OK</string>
    <string name="no">Cancelar</string>
    <string name="warning">Atenção! %1$s</string>
    <string name="msg_cadastro_sucesso">Usuário cadastrado com sucesso!</string>
    <string name="msg_erro_senha"> As senhas não são correspondentes </string>
    <string name="msg_usuario_senha"> Usuário ou senha inválidos </string>
    <string name="msg_campos_email_senha"> Preencha os campos de email e senha! </string>
    <string name="msg_falha_autenticacao">Falha na autenticação</string>
    <string name="msg_login_sucesso">Login efetuado com sucesso</string>
    <string name="msg_camera_default">Posicione corretamente</string>
    <string name="msg_send_email">Um email foi enviado para %1$s com as instruções de troca de senha!</string>
    <string name="msg_email_nao_cad">Email não cadastrado na base de dados.</string>
    <string name="msg_erro_senha_minimo">Digite uma senha mais forte, no mínimo 6 caracteres(letras e números)</string>
    <string name="msg_erro_email_valido">Email digitado é inválido. Digite um novo Email</string>
    <string name="msg_erro_cadastro_existente"> Já existe um usuário com esse email cadastrado no sistema!</string>
    <string name="msg_erro_cadastro">Um erro do endereçamento de pacotes desconhecido aconteceu. Tente o processo novamente!</string>
    <string name="msg_info_um_email_foi_enviado">Um email foi enviado para  %1$s para completar o seu cadastro. Verifique!</string>
    <string name="nao_possui_login">Não possui login?</string>
    <string name="login">Login</string>
    <string name="entre_para_fazer_login">Entre com os seus dados para fazer login</string>
    <string name="autentication">Autenticação</string>
    <string name="termos_de_uso_texto">Ao realizar o cadastro para utilização do Aplicativo, o Usuário se submeterá automaticamente a todas as regras e condições destes Termos de Uso:                                                  O Aplicativo permite que o Usuário tenha acesso a informações e conteúdos relacionados a publicações do AppBelchior. Dentro deste contexto, o Usuário poderá interagir com o ae com os contatos de seu perfil enviando ou publicando textos, imagens, fotografias além de ter acesso a outras funcionalidades disponibilizadas pelo Aplicativo.                 Será permitido um único cadastramento por Usuário, devendo o acesso, visualização e uso do Aplicativo ser feito pelo Usuário em caráter pessoal e intransferível.                                 O Usuário não poderá, em qualquer hipótese, compartilhar o Aplicativo em qualquer site ou ambiente virtual, nem se utilizar do cadastro de outro Usuário, sem sua respectiva autorização. Nestes casos, o AppBelchior se reserva o direito de bloquear o acesso sem aviso prévio ao Usuário.  Recomendamos que o usuário para ter acesso deverá ter 14 (quatorze) anos completos, no mínimo. No caso de menores de 18 (dezoito) e outras pessoas que necessitem de representação na forma da lei, estes devem estar devidamente representados ou assistidos, conforme o caso, por seus pais ou responsáveis legais, os quais deverão preencher o cadastro em caráter de representação ou assistência ao Usuário, responsabilizando-se integralmente por este e por seus atos.         O AppBelchior se reserva o direito de, sem aviso prévio, cancelar e/ou bloquear o acesso do Usuário, a qualquer momento, caso seja constatado que este praticou algum ato ou mantenha conduta que (i) viole as leis e regulamentos federais, estaduais e/ou municipais; (ii) contrarie as regras destes Termos de Uso, e (ii) viole os princípios da moral e dos bons costumes.          Toda e qualquer ação executada ou conteúdo publicado pelo Usuário durante o uso do Aplicativo será de sua exclusiva e integral responsabilidade, devendo isentar e indenizar o AppBelchior de quaisquer reclamações judiciais ou extrajudiciais, prejuízos, perdas e danos causados ao AppBelchior , em decorrência de tais ações ou manifestações.        O AppBelchior se reserva o direito de incluir, excluir ou alterar quaisquer aspectos e conteúdo do Aplicativo, podendo suspendê-lo temporariamente ou cancelá-lo, a seu exclusivo critério e a qualquer tempo, independente de aviso prévio ao Usuário. Da mesma forma, o AppBelchior poderá modificar estes Termos de Uso, cuja versão mais recente estará sempre disponível para consulta no próprio Aplicativo.        O AppBelchior se exime de toda e qualquer responsabilidade pelos danos e prejuízos de qualquer natureza que possam decorrer do acesso, interceptação, eliminação, alteração, modificação ou manipulação, por terceiros não autorizados, dos dados do Usuário durante a utilização do aplicativo. As informações solicitadas ao Usuário no momento do cadastro serão utilizadas pelo AppBelchior somente para os fins previstos nestes Termos de Uso e em nenhuma circunstância tais informações serão cedidas ou compartilhadas com terceiros, exceto por ordem judicial ou de autoridade competente.</string>
    <string name="politica_de_privacidade_texto">Todas as suas informações pessoais recolhidas, serão usadas para o ajudar a tornar a sua visita no nosso aplicativo o mais produtiva e agradável possível. A garantia da confidencialidade dos dados pessoais dos utilizadores do nosso aplicativo é importante para o AppBelchior.  Todas as informações pessoais relativas a membros, assinantes, clientes ou visitantes que usem o aplicativo AppBelchior serão tratadas em concordância com a Lei da Proteção de Dados Pessoais de 26 de outubro de 1998 (Lei n.º 67/98). A informação pessoal recolhida pode incluir o seu nome, e-mail, número de telefone e/ou telemóvel, data de nascimento e/ou outros. O uso do aplicativo AppBelchior pressupõe a aceitação deste acordo de privacidade bem como dos Termos de Uso. A equipe do AppBelchior reserva-se ao direito de alterar este acordo sem aviso prévio. Deste modo, recomendamos que consulte a nossa política de privacidade e termos de uso com regularidade, de forma a estar sempre atualizado.</string>
    <string name="a_musica_ja_foi_desbloqueada">A musica "%1$s" já foi desbloqueada.</string>
    <string name="voce_desbloqueou_a_musica">A musica "%1$s" foi desbloqueada.</string>
    <string name="cadastre_se">Cadastre-se.</string>
    <string name="edtEmail">Email</string>
    <string name="edtSenha">Senha</string>
    <string name="edtConfSenha">Confirmar senha</string>
    <string name="edtNome">Nome</string>
    <string name="edtSobrenome">Sobrenome</string>
    <string name="edtData">Data de nascimento</string>
    <string name="rdFeminino">Feminino</string>
    <string name="rdMasculino">Masculino</string>
    <string name="cadastro">Cadastro</string>
    <string name="registro">Registro</string>
    <string name="insira_seus_dados">Insira seus dados para concluir a autenticação</string>
    <string name="não_informado">Não Informado</string>
    <string name="outro">Outro</string>
    <string name="esqueci_senha">Esqueceu sua senha?</string>
    <string name="msg_erro_email_nao_existe">O usuário cujo email foi inserido não existe.</string>
    <string name="msg_erro_senha_invalida">A senha inserida é inválida para este usuário</string>
    <string name="msg_erro_requisicao_falhada">Erro de requisição get. Tente novamente.</string>
    <string name="msg_erro_email_nao_verificado">Seu email não foi verificado! Verifique seu email e confirme o cadastro.</string>
    <string name="msg_erro_get_documento">Ocorreu um erro ao fazer a requisição para recuperar todos os dados. Tente novamente. Erro %1$s.</string>
    <string name="processando">Processando</string>
    <string name="msg_autenticando_dados_do_usuario">Autenticando dados do usuário...</string>
    <string name="msg_cadastrando_dados_do_usuario">Cadastrando dados do usuário...</string>
    <string name="msg_erro_preencha_email_e_senha">Preencha os campos de email e senha!</string>
    <string name="msg_erro_preencha_todos_os_campos">Preencha todos os campos para continuar o cadastro!</string>
    <string name="insira_email_para_recuperar_senha">Insira o email cadastrado anteriomente para recuperar a senha</string>
    <string name="msg_erro_senhas_nao_conferem">As senhas não conferem!</string>
    <string name="email_enviado_title">Email enviado</string>
    <string name="msg_erro_email_nao_existente_para_autenticacao">Email não existente para autenticação</string>
    <string name="politica_de_privacidad_texto">Todas as suas informações pessoais coletadas serão usadas para ajudar a tornar a sua visita no nosso aplicativo tão produtiva e agradável quanto possível. Garantir a confidencialidade dos dados pessoais dos usuários do nosso aplicativo é importante para o AppBelchior. Todas as informações pessoais relativas a membros, assinantes, clientes ou visitantes que utilizem o aplicativo AppBelchior serão tratadas de acordo com a Lei de Proteção de Dados Pessoais de 26 de outubro de 1998 (Lei nº 67/98). As informações pessoais coletadas podem incluir seu nome, endereço de e-mail, número de telefone e / ou telefone celular, data de nascimento e / ou outro. O uso do aplicativo AppBelchior assume aceitação deste contrato de privacidade, bem como os Termos de Uso. O pessoal da AppBelchior reserva-se o direito de alterar este contrato sem aviso prévio. Portanto, recomendamos que você revise nossa política de privacidade e termos de uso regularmente para que você esteja sempre atualizado.</string>
    <string name="verificando_usuario_na_database">Verificando usuario na base de dados</string>
    <string name="de_dados">de dados</string>
    <string name="msg_erro_conecte_a_internet_para_continuar">Conecte-se a internet para continuar</string>
    <string name="msg_erro_nenhum_doc_encontrado_para_esse_usuario">Não foi encontrado nenhum documento na base de dados para esse usuário.</string>
    <string name="tituloMusica0">Fotografia 3x4 (1976)</string>
    <string name="tituloMusica1">Tudo outra vez (1979)</string>
    <string name="tituloMusica2">Galos, Noites e Quintais (1977)</string>
    <string name="tituloMusica3">À palo seco (1973)</string>
    <string name="tituloMusica4">Alucinação (1976)</string>
    <string name="tituloMusica5">Divina Comédia Humana (1978)</string>
    <string name="tituloMusica6">Coração Selvagem (1977)</string>
    <string name="tituloMusica7">Velha Roupa Colorida (1976)</string>
    <string name="tituloMusica8">Como Nossos Pais (1976)</string>
    <string name="tituloMusica9">Paralelas (1977)</string>
    <string name="procure_a_proxima">Procure a próxima!</string>
    <string name="parabens">Parabéns</string>
    <string name="pausado"><b>EM PAUSA:</b> %1$s</string>
    <string name="reproduzindo"><b>REPRODUZINDO:</b> %1$s</string>
</resources>